# polyclippy

./: CMakeLists.txt  README.md
scripts/: build.sh  clean.sh  install.sh  rebuild.sh  test.sh
src/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/edge/: CMakeLists.txt  Edge.cpp  Edge.h
src/modules/lib/: CMakeLists.txt  c_api.cpp  c_api.h
src/modules/point/: Point.h
src/modules/polygon/: CMakeLists.txt  Polygon.cpp  Polygon.h
src/modules/shape/: CMakeLists.txt  Shape.cpp  Shape.h
src/modules/util/: MathUtil.h  PointUtil.h  PolyUtil.h
test/: CMakeLists.txt
test/edge/: CMakeLists.txt  testEdge.cpp
test/polygon/: CMakeLists.txt  testPolygon.cpp
test/polyintersect/: CMakeLists.txt  testPolyintersect.cpp
test/util/: CMakeLists.txt  testUtil.cpp
